--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,9 @@
     text-align: center;
     color: white;
 }
-:focus {
-    outline: none;
-}
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
-
 html, body {
     height: 100%;
     width: 100%;
@@ -74,6 +70,9 @@ body {
 }
 .calc-btn:hover {
     box-shadow: inset 0 0 5px 5px rgba(245, 245, 245, 0.3);
+}
+.calc-btn:focus {
+    outline: none;
 }
 #btn0 {
     grid-column: 1 / 2;
