--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body {
 .calc-btn:hover {
     box-shadow: inset 0 0 5px 5px rgba(245, 245, 245, 0.3);
 }
-.calc-btn:focus {
+.calc-btn:focus, .calc-btn:active {
     outline: none;
 }
 #btn0 {
