--- a/css/main.css
+++ b/css/main.css
@@ -71,8 +71,8 @@ body {
 .calc-btn:hover {
     box-shadow: inset 0 0 5px 5px rgba(245, 245, 245, 0.3);
 }
-.calc-btn:focus, .calc-btn:active {
-    outline: red;
+.calc-btn, .calc-btn:focus {
+    outline: none;
 }
 #btn0 {
     grid-column: 1 / 2;
