--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     border: 0;
     padding: 0;
     margin: 0;
-    outline: none;
+    outline: none !important;
     box-sizing: border-box;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     font-size: 24pt;
