--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,15 @@
     border: 0;
     padding: 0;
     margin: 0;
-    outline: none !important;
+    outline: none;
     box-sizing: border-box;
     font-family: Roboto, Arial, Helvetica, sans-serif;
     font-size: 24pt;
     text-align: center;
     color: white;
+}
+:focus {
+    outline: 0;
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
