--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,6 @@
     text-align: center;
     color: white;
 }
-*:focus {
-    outline: 0;
-}
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
@@ -72,6 +69,9 @@ body {
 }
 .calc-btn:hover {
     box-shadow: inset 0 0 5px 5px rgba(245, 245, 245, 0.3);
+}
+calc-btn:focus {
+    outline: 0;
 }
 #btn0 {
     grid-column: 1 / 2;
