--- a/css/main.css
+++ b/css/main.css
@@ -70,8 +70,8 @@ body {
 .calc-btn:hover {
     box-shadow: inset 0 0 5px 5px rgba(245, 245, 245, 0.3);
 }
-calc-btn:focus {
-    outline: 0;
+.calc-btn:focus {
+    outline: none;
 }
 #btn0 {
     grid-column: 1 / 2;
