--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ body {
 .calc-btn:hover {
     box-shadow: inset 0 0 5px 5px rgba(245, 245, 245, 0.3);
 }
-:focus {
+.calc-btn:focus {
     outline: none;
 }
 #btn0 {
