--- a/css/bondi.css
+++ b/css/bondi.css
@@ -226,11 +226,13 @@ header #content-btn {
     width: 100%;
     object-fit: cover;
     opacity: 0.8;
+    z-index: 0;
 }
 #works img:hover {
     transform: scale(1.2);
     transition: all 1s ease-in-out;
     opacity: 1;
+    z-index: 1;
 }
 main #content-btn {
     margin-top: 40px;
