--- a/css/dark.css
+++ b/css/dark.css
@@ -17,20 +17,17 @@
 html, body {
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 body {
     background-image: url(/media/starlight.svg);
     background-color: rgba(0.5, 0.5, 0.5, 1);
 }
-main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-}
-.grid-box {
+#calculator {
     display: grid;
+    align-self: center;
+    justify-self: center;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: repeat(5, 100px);
     background-color: rgba(10, 10, 10, 0.8);
@@ -210,15 +207,14 @@ span {
     color: hotpink;
     background-color: rgba(255, 105, 180, 0.1);
 }
-footer, #credits {
+footer {
+    align-self: flex-end;
+    justify-self: flex-end;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-footer {
     width: 100%;
-    position: fixed;
-    bottom: 1%;
+
 }
 #github {
     width: -moz-fit-content;
