--- a/css/matrix.css
+++ b/css/matrix.css
@@ -6,7 +6,6 @@
     padding: 0;
     outline: none;
     border: none;
-    box-sizing: border-box;
 }
 html, body {
     display: flex;
@@ -93,8 +92,38 @@ html, body {
 .w-100pc {
     width: 100%;
 }
-.m-l-neg-3px {
-    margin-left: -3px;
+
+/** Animation **/
+
+.buttonCallArea {
+    width: 50px;
+    transition: width 100ms ease-in;
+}
+.buttonCallArea:hover {
+    width: 100px;
+}
+.slideIn {
+    transform: translateX(100%);
+    transition: none;
+}
+.buttonCallArea:hover .slideIn {
+    transform: translateX(0);
+    transition: transform 100ms ease-in;
+}
+.toolbar-button:active .pressDown {
+    transform: scale(0.8);
+}
+#search:hover {
+    border-right-color: #47d1cd;
+    background: linear-gradient(to left, #47d1cd40, #252525);
+}
+#random:hover {
+    border-right-color: #9933ff;
+    background: linear-gradient(to left, #9933ff40, #252525);
+}
+#clear:hover {
+    border-right-color: #db143c;
+    background: linear-gradient(to left, #db143c40, #252525);
 }
 
 /** Borders **/
@@ -144,17 +173,14 @@ html, body {
 .fg-323232 {
     color: #323232;
 }
-.fg-48d1cc {
-    color: #48d1cc;
+.fg-47d1cd {
+    color: #47d1cd;
 }
-.fg-40e0d0 {
-    color: #40e0d0;
+.fg-9933ff {
+    color: #9933ff;
 }
-.fg-9370d8 {
-    color: #9370d8;
-}
-.fg-dc143c {
-    color: #dc143c;
+.fg-db143c {
+    color: #db143c;
 }
 .bg-778899 {
     background-color: #778899;
@@ -186,9 +212,6 @@ html, body {
 .bg-3ee0cf10 {
  background-color: #3ee0cf10;
 }
-.b-48d1cc {
-    border-color: #48d1cc;
-}
 .b-77889940 {
     border-color: #77889940;
 }
@@ -198,69 +221,43 @@ html, body {
 
 /** Toolbar Buttons **/
 
-#search {
-    width: 53px;
-}
-#random {
-    width: 53px;
-}
-#clear {
-    width: 53px;
-    transition: width 250ms ease-in-out;
-}
-#search:hover {
-    width: 100px;
-    border-right-color: #47d1cd;
-    background: linear-gradient(to left, #47d1cd40, #252525);
-}
-#random:hover {
-    width: 100px;
-    border-right-color: #9933ff;
-    background: linear-gradient(to left, #9933ff40, #252525);
-}
-#clear:hover {
-    width: 100px;
-    border-right-color: #db143c;
-    background: linear-gradient(to left, #db143c40, #252525);
-}
 .toolbar-button {
-    box-sizing: content-box;
-    background: none;
+    background: none; /* ! Override browser default ! */
     width: 50px;
     height: 50px;
 }
 
 /** Icons **/
 
-.fa-search, .fa-random, .fa-times {
-    transform: translateX(100px);
+.marker  {
+    position: absolute;
 }
-#search:hover .fa-search {
-    color: #47d1cd;
+.marker .fa {
+    color: #77889920;
+}
+#search:hover .motion {
     transform: translate(0);
-    transition: transform 250ms ease-in-out;
+    transition: transform 180ms ease-in;
 }
-#random:hover .fa-random {
-    color: #9933ff;
+#random:hover .motion {
     transform: translate(0);
-    transition: transform 250ms ease-in-out;
+    transition: transform 180ms ease-in;
 }
-#clear:hover .fa-times {
-    color: #db143c;
+#clear:hover .motion {
     transform: translate(0);
-    transition: transform 250ms ease-in-out;
+    transition: transform 180ms ease-in;
 }
-#search button:active > .fa-search {
+#search button:active > .motion {
     transform: scale(0.8);
 }
-#random button:active > .fa-random {
+#random button:active > .motion {
     transform: scale(0.8);
 }
-#clear button:active > .fa-times {
+#clear button:active > .motion {
     transform: scale(0.8);
 }
 
-/** Array Input Field **/
+/** Array Grid **/
 
 #query {
     margin-right: 25px;
@@ -269,7 +266,7 @@ html, body {
     background-color: #47d1cd40;
 }
 #query:focus {
-    border-color: #48d1cc;
+    border-color: #47d1cd;
 }
 #array {
     height: 50px;
@@ -300,7 +297,7 @@ html, body {
     text-indent: 20px;
     padding: 20px 0;
     font-family: monospace, Roboto, Arial, Helvetica, sans-serif;
-    color: #40e0d0;
+    color: #47d1cd;
 }
 
 
