--- a/css/calculator.css
+++ b/css/calculator.css
@@ -23,8 +23,8 @@ html, body {
     justify-content: center;
 }
 body {
-    background-image: url(media/.svg/starlight.svg);
     background-color: rgba(0.5, 0.5, 0.5, 1);
+    background-image: url(/media/svg/starlight.svg);
 }
 #calculator {
     display: grid;
