--- a/styles/classes.css
+++ b/styles/classes.css
@@ -1,5 +1,5 @@
 
-// Opacity
+/* Opacity */
 
 .op-10 {
     opacity: 0.1;
@@ -29,7 +29,7 @@
     opacity: 0.9;
 }
 
-// Layout
+/* Layout */
 
 .grid {
     align-items: center;
@@ -56,7 +56,7 @@
     justify-content: flex-end;
 }
 
-// Alignment
+/* Alignment */
 
 .center-fg {
     text-align: center;
@@ -68,7 +68,7 @@
     background-size: cover;
 }
 
-//Sizing
+/* Sizing */
 
 .vw-100 {
     width: 100vw;
@@ -95,11 +95,11 @@
     height: 100%;
 }
 
-// Boxes
 
 
 
-// Colors
+
+/* Colors */
 
 .light-fg {
     color: white;
