--- a/styles/home.css
+++ b/styles/home.css
@@ -8,8 +8,8 @@ header {
     background-position: center;
     background-size: cover;
     color: #ffffff;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 #container {
     display: flex;
