--- a/styles/home.css
+++ b/styles/home.css
@@ -8,8 +8,8 @@ header {
     background-position: center;
     background-size: cover;
     color: #ffffff;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 #container {
     display: flex;
@@ -61,19 +61,25 @@ header {
         text-shadow: none;
         color: hsla(348, 83%, 47%, 0.25);
         border-color: hsla(348, 83%, 47%, 0.25);
-        background-color: transparent;
     }
     to {
         text-shadow: 0 0 8px crimson;
         color: crimson;
         border-color: crimson;
-        background-color: hsla(348, 83%, 47%, 0.75);
     }
 }
-#city {
+#author {
     margin-top: 48px;
     text-align: center;
     vertical-align: middle;
     color: hsla(0, 0%, 100%, 0.50);
     font-size: 24px;
+    padding: 10px 20px;
+}
+#visit {
+    text-decoration: none;
+    color: hsla(0, 0%, 100%, 0.50);
+}
+#visit:hover {
+    color: white;
 }
