--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,10 @@
 
 html, body {
     width: 100vw;
-    height: 100vh;
+    height: 200vh;
     font-family: 'Dosis', 'Varela Round', Arial, Helvetica, sans-serif;
+    scrollbar-width: none;
+}
+::-webkit-scrollbar {
+    display: none;
 }
