--- a/styles/home.css
+++ b/styles/home.css
@@ -96,7 +96,7 @@ header {
 }
 .illustration {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     text-align: center;
     width: 20%;
@@ -134,21 +134,33 @@ header {
     justify-items: center;
     justify-content: center;
     width: 100%;
+    height: 33.33%;
     background-color: hsla(0, 0%, 15%, 0.9);
     color: white;
     padding: 10px 20px;
 }
+.illustration:hover .wrapper {
+    visibility: visible;
+}
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
 .info p, .info h1 {
     width: 50%;
+    overflow: hidden;
 }
 .explore {
+    width: 100%;
+    height: 100%;
     background-color: #25252590;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.illustration:hover .wrapper {
-    visibility: visible;
 }
 #link-btn {
     display: block;
