--- a/styles/home.css
+++ b/styles/home.css
@@ -138,7 +138,6 @@ header {
     background-color: transparent;
     color: black;
     opacity: 0;
-    padding: 10px 0;
     overflow-x: hidden;
     transition: all 1s;
     transform: translateX(-100%);
@@ -150,15 +149,27 @@ header {
     background-color: hsla(0, 0%, 100%, 0.75);
 }
 .category {
-    font-size: 23px;
-    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.category h1 {
+    width: 100%;
+    font-size: 48px;
+    padding: 0 15%;
 }
 .info {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    padding: 0 8px;
+    width: 100%;
+    height: 100%;
+}
+.info p {
+    width: 70%;
 }
 .explore {
     width: 100%;
