--- a/styles/classes.css
+++ b/styles/classes.css
@@ -111,7 +111,7 @@
     color: black;
 }
 .dark-bg {
-    background-color: black;
+    background-color: #121212;
 }
 .smoke-fg {
     color: #252525;
