--- a/styles/global.css
+++ b/styles/global.css
@@ -3,6 +3,7 @@ html, body {
     width: 100vw;
     font-family: 'Dosis', 'Varela Round', Arial, Helvetica, sans-serif;
     scrollbar-width: none;
+    scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
     display: none;
