--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,11 @@
 body {
     background: #121212 center no-repeat fixed;
 }
+.separator {
+    width: 100%;
+    height: 5vh;
+    background-color: #121212;
+}
 header {
     display: flex;
     align-items: center;
@@ -77,7 +82,6 @@ header {
     color: crimson;
     background-color: transparent;
     animation: glow 1.5s infinite alternate ease-in;
-    text-shadow: none;
 }
 @keyframes glow {
     from {
@@ -106,17 +110,18 @@ header {
 #visit:hover {
     color: white;
 }
-#categories {
+.section {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     text-align: center;
     width: 100%;
-    height: 20vh;
+    height: 15vh;
     font-size: 100%;
     padding: 24px 48px;
     background-color: #121212cc;
     color: white;
+    border-top: 1px solid crimson;
 }
 .dot-box {
     display: grid;
@@ -152,13 +157,14 @@ header {
     width: 10px;
     height: 10px;
 }
-#categories h1 {
+.section h1 {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
     padding-left: 24px;
 }
+
 /**************************************************/
 
 .accordion {
@@ -167,7 +173,7 @@ header {
     justify-items: center;
     justify-content: center;
     overflow: clip;
-    height: 80vh;
+    height: 85vh;
     font-family: 'Poiret One';
 }
 .illustration {
@@ -184,9 +190,6 @@ header {
     flex: 1;
     overflow: clip;
 }
-
-
-
 #slide0 {
     background-image: url("../media/car-18.jpg");
 }
@@ -217,13 +220,6 @@ header {
     transition: all 1s;
     transform: translateX(-100%);
 }
-/*
-.illustration:hover .wrapper {
-    transform: translateX(0);
-    opacity: 1;
-    background-color: #ffffffcc;
-}
-*/
 .category {
     display: flex;
     align-items: center;
@@ -278,8 +274,7 @@ header {
     height: 100px;
     bottom: 1vh;
     left: 50vw;
-    position: sticky;
-    font-family: 'material-icons-round';
+    position: fixed;
     z-index: 9;
 }
 #arrow a {
@@ -290,17 +285,71 @@ header {
     width: fit-content;
     height: fit-content;
 }
-#arrow span {
-    font-size: 100px;
+#arrow i {
     animation: hop 850ms infinite alternate ease-in-out;
 }
 @keyframes hop {
     from {
         color: #ffffff00;
         transform: translateY(-10%);
+        text-shadow: none;
     }
     to {
         color: #ffffff;
         transform: translateY(10%);
+        text-shadow: 0 0 8px white;
     }
+}
+
+/*---------------------------------------------------------------------------*/
+
+#drawer {
+    position: fixed;
+    right: 0;
+    bottom: 1vh;
+    width: min-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    background-color: #121212cc;
+    transition: all 350ms ease-in-out;
+    transform: translateX(70%);
+}
+#drawer:hover {
+    transform: translateX(0);
+}
+.fa-caret-left {
+    transition: transform 350ms ease-in-out;
+}
+#drawer:hover .fa-caret-left {
+    transform: rotateZ(180deg);
+    transform-origin: center;
+}
+#marker {
+}
+#marker .fa-caret-left {
+    color: crimson;
+    background-color: #dc143c00;
+}
+#toggle {
+    background-color: #121212;
+    border-top-left-radius: 100%;
+    border-bottom-left-radius: 100%;
+}
+#drawer:hover #toggle {
+
+}
+#toggle button {
+    width: 100%;
+    height: 100%;
+}
+#toggle i {
+    background-color: #121212;
+    color: #484848;
+}
+#toggle:hover i {
+    color: lightgoldenrodyellow;
 }
