--- a/styles/home.css
+++ b/styles/home.css
@@ -171,6 +171,7 @@ header {
     font-family: 'Poiret One';
 }
 .slide {
+    z-index: 0;
     display: flex;
     align-items: center;
     justify-content: flex-start;
