added fonts ass local file

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,9 @@
-
+@import url(../fonts/PoiretOne-Regular.ttf);
 html, body {
     width: 100vw;
-    font-family: 'Dosis', 'Varela Round', Arial, Helvetica, sans-serif;
-    scrollbar-width: none;
+    font-family: 'Poiret One', 'Dosis', 'Varela Round', Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
-    z-index: 0;
+    scrollbar-width: none;
 }
 ::-webkit-scrollbar {
     display: none;
