--- a/styles/home.css
+++ b/styles/home.css
@@ -89,7 +89,11 @@ header {
         border-color: crimson;
     }
 }
-#author {
+#credits {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin-top: 48px;
     text-align: center;
     vertical-align: middle;
@@ -104,58 +108,26 @@ header {
 #visit:hover {
     color: white;
 }
-.section {
+.heading {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     text-align: center;
     width: 100%;
-    height: 15vh;
+    height: 30vh;
     font-size: 100%;
     padding: 24px 48px;
     background-color: #121212cc;
     color: white;
 }
-.dot-box {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: center;
-    justify-items: center;
-    width: 50px;
-}
-.dots-3 {
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 50px;
-}
-.dots-2 {
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    grid-template-rows: 1fr 1fr;
-    height: 30px;
-}
-.dots-1 {
-    display: grid;
-    align-items: center;
-    justify-items: center;
-    grid-template-rows: 1fr;
-    height: 10px;
-}
-.dot {
-    background-color: crimson;
-    border-radius: 100%;
-    width: 10px;
-    height: 10px;
-}
-.section h1 {
+#heading-0, #heading-1 {
+    height: 33.33%;
+    padding: 1em;
+    font-size: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    padding-left: 24px;
+    border-left: 3px solid crimson;
 }
 
 /**************************************************/
@@ -166,7 +138,7 @@ header {
     justify-items: center;
     justify-content: center;
     overflow: clip;
-    height: 85vh;
+    height: 70vh;
 }
 .slide {
     z-index: 0;
@@ -220,8 +192,7 @@ header {
     width: 100%;
     height: 100%;
 }
-.category h1 {
-    width: 70%;
+.category h3 {
     font-size: 48px;
 }
 .info {
@@ -262,11 +233,11 @@ header {
 #nav-arrow {
     display: flex;
     align-items: center;
+    justify-items: center;
     justify-content: center;
-    width: 100px;
+    width: 100%;
     height: 100px;
     bottom: 1vh;
-    left: 50vw;
     position: fixed;
     z-index: 9;
 }
@@ -307,7 +278,7 @@ header {
     align-items: center;
     justify-items: center;
     height: 60px;
-    background-color: #121212;
+    background-color: hsla(0, 0%, 7%, 0.77);
     overflow: clip;
 
     /** Variant A
@@ -329,13 +300,11 @@ header {
     gap: 16px;
     align-items: center;
     justify-items: center;
-    background-color: #121212;
     border-radius: 28px;
     padding: 8px;
     transition: all 350ms ease-in-out;
 }
 #arrow {
-    background: #121212;
     color: crimson;
     font-size: 96px;
     border-radius: 100%;
